syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

service User{
    rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse);//检查密码
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);//创建用户并返回用户信息
    rpc GetUserByID(IDRequest) returns (UserInfoResponse);//通过ID查询用户
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);//通过Mobile查询用户
    rpc GetUserList(PageInfo) returns (UserListResponse);//用户列表
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);//更新用户信息
}

message CheckResponse {
    bool success = 1;
}

message CreateUserInfo {
    string nickName = 1;
    string passWord = 2;
    string mobile = 3;
}

message IDRequest {
    int32 id = 1;
}

message MobileRequest {
    string mobile = 1;
}

message PageInfo{
    uint32 Pn = 1;
    uint32 PSzie = 2;
}

message PasswordCheckInfo {
    string passWord = 1;
    string encryptedPassword = 2;
}

message UpdateUserInfo {
    int32 id = 1;
    string nickName = 2;
    string gender = 3;
    uint64 birthday = 4;
}

message UserInfoResponse {
    int32 id = 1;
    string passWord = 2;
    string mobile = 3;
    string nickName = 4;
    uint64 birthday = 5;
    string gender = 6;//性别
    uint32 role = 7;//用户权限
}

message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}